kube/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patron_account
      role: web
  template:
    metadata:
      labels:
        app: patron_account
        role: web
    spec:
      volumes:
      - name: config-settings
        secret:
          secretName: config-settings
      containers:
      - name: web
        image: mlibrary/patron-account:0.0.1 #commit-hash
        ports:
        - containerPort: 4567
