kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: patron-account
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: SUBDOMAIN.patron-account.kubernetes.lib.umich.edu
    http:
      paths:
      - path: /
        backend:
          serviceName: patron-account-web
          servicePort: 4567
  tls:
  - hosts:
    - SUBDOMAIN.patron-account.kubernetes.lib.umich.edu
    secretName: patron-account-tls
